bpk-lib/crates/core/tests/ui/entity_id_without_serde.stderr
error[E0277]: the trait bound `LocalOnlyId: serde::Serialize` is not satisfied
 --> tests/ui/entity_id_without_serde.rs:8:22
  |
8 |     assert_serialize(&id);
  |     ---------------- ^^^ unsatisfied trait bound
  |     |
  |     required by a bound introduced by this call
  |
help: the trait `Serialize` is not implemented for `LocalOnlyId`
 --> tests/ui/entity_id_without_serde.rs:6:5
  |
6 |     batpak::define_entity_id!(LocalOnlyId, "local-only");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `LocalOnlyId` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
note: required by a bound in `assert_serialize`
 --> tests/ui/entity_id_without_serde.rs:3:24
  |
3 | fn assert_serialize<T: serde::Serialize>(_value: &T) {}
  |                        ^^^^^^^^^^^^^^^^ required by this bound in `assert_serialize`
  = note: this error originates in the macro `batpak::define_entity_id` (in Nightly builds, run with -Z macro-backtrace for more info)
